We edited a new id and the footer

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
             <div class="dino">
                 <div class="pic_left">
-                    <img src="https://vignette.wikia.nocookie.net/jurassicfightclub/images/c/cd/Stegosaurus.png/revision/latest?cb=20121003014145"
+                    <img id="steg"src="https://vignette.wikia.nocookie.net/jurassicfightclub/images/c/cd/Stegosaurus.png/revision/latest?cb=20121003014145"
                         alt="">
                 </div>
                 <div class="story_right">
@@ -102,7 +102,7 @@
 
         </div>
         <div id="footer">
-            Copyright &copy;Evan Mei
+            <p>Copyright &copy; Evan Mei 2019</p> 
         </div>
     </div>
 </body>
